--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,6 +1,34 @@
 .question {
     margin-bottom:20px;
 }
+
 .active {
-    border-bottom:3px solid black;
+    border-bottom:3px solid white;
 }
+
+h3 {
+    font-family: Merienda;
+    font-weight: bold;
+}
+body {
+    background: #868686;
+    background: -webkit-linear-gradient(left,rgba(192, 159, 128, 1),rgba(86, 86, 86, 1));
+    background: -o-linear-gradient(right,rgba(192, 159, 128,1),rgba(86, 86, 86, 1));
+    background: -moz-linear-gradient(right,rgba(192, 159, 128,1),rgba(86, 86, 86,1));
+    background: linear-gradient(to right, rgba(192, 159, 128,1), rgba(86, 86, 86,1));
+}
+
+.ask-question {
+    color: #76323F;
+    font-weight: bold;
+}
+
+.question {
+    font-size: larger;
+    font-family: Merienda;
+}
+.navbar {
+    background-color: #76323F;
+    font-weight: bold;
+}
+
