--- a/css/quiz.css
+++ b/css/quiz.css
@@ -12,10 +12,10 @@ h3 {
 }
 body {
     background: #868686;
-    background: -webkit-linear-gradient(left,rgba(192, 159, 128, 1),rgba(86, 86, 86, 1));
-    background: -o-linear-gradient(right,rgba(192, 159, 128,1),rgba(86, 86, 86, 1));
-    background: -moz-linear-gradient(right,rgba(192, 159, 128,1),rgba(86, 86, 86,1));
-    background: linear-gradient(to right, rgba(192, 159, 128,1), rgba(86, 86, 86,1));
+    background: -webkit-linear-gradient(left,rgba(192, 159, 128, 0),rgba(86, 86, 86, 1));
+    background: -o-linear-gradient(right,rgba(192, 159, 128,0),rgba(86, 86, 86, 1));
+    background: -moz-linear-gradient(right,rgba(192, 159, 128,0),rgba(86, 86, 86,1));
+    background: linear-gradient(to right, rgba(192, 159, 128,0), rgba(86, 86, 86,1));
 }
 
 .ask-question {
@@ -26,6 +26,7 @@ body {
 .question {
     font-size: larger;
     font-family: Merienda;
+    border-bottom:3px solid black;
 }
 .navbar {
     background-color: #76323F;
