--- a/startbootstrap-agency-gh-pages/scss/_charts.scss
+++ b/startbootstrap-agency-gh-pages/scss/_charts.scss
@@ -1,9 +1,9 @@
 // Styling for the portfolio section
-#portfolio {
-  .portfolio-item {
+#charts {
+  .charts-item {
     right: 0;
     margin: 0 0 15px;
-    .portfolio-link {
+    .charts-link {
       position: relative;
       display: block;
       max-width: 400px;
@@ -21,7 +21,7 @@
         &:hover {
           opacity: 1;
         }
-        .portfolio-hover-content {
+        .charts-hover-content {
           font-size: 20px;
           position: absolute;
           top: 50%;
@@ -40,7 +40,7 @@
         }
       }
     }
-    .portfolio-caption {
+    .charts-caption {
       max-width: 400px;
       margin: 0 auto;
       padding: 25px;
@@ -63,14 +63,14 @@
   }
 }
 @media(min-width:767px) {
-  #portfolio {
-    .portfolio-item {
+  #charts {
+    .charts-item {
       margin: 0 0 30px;
     }
   }
 }
 
-.portfolio-modal {
+.charts-modal {
   padding-right: 0px !important;
   .modal-dialog {
     margin: 1rem;
