--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,13 +1,20 @@
 .question {
     margin-bottom:20px;
 }
-
+.correct {
+    background-image:url('../imgs/green-streak.png');
+    background-repeat:no-repeat;
+}
+.false {
+    background-image:url('../imgs/red-streak.jpg');
+    background-repeat:no-repeat;
+}
 .active {
     border-bottom:3px solid white;
 }
 nav * {
-    color:#111 !important;
-     text-shadow: 1px 1px white;
+    color:white !important;
+     text-shadow: 2px 2px black;
      font-weight:bold;
 }
 .ask-question {
@@ -23,6 +30,9 @@ height:80px;
 background-image:url('../imgs/streak.png');
 background-size:contain;
 }
+.navbar-brand {
+    font-size:25px;
+}
 footer {
     height:50px;
 }
@@ -32,3 +42,27 @@ footer {
 .blockquote {
     background-color:#999 !important;
 }
+.correct {
+
+}
+.heading {
+    font-size:90px;
+}
+.subheading {
+    font-style:oblique;
+    font-size:30px;
+}
+#info-text {
+    text-align: center;
+    font-size: 40px;
+    color: white;
+    text-shadow: 2px 1px 14px black;
+}
+.background {
+
+    /*background-image: linear-gradient(to bottom, rgba(0,0,0,0.1) 20%,rgba(0,0,0,0.1) 100%), url('../imgs/poverty.png'); */
+}
+
+
+
+
